--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ diff-match-patch==20241021
 Django==5.2.3
 django-colorfield==0.14.0
 django-import-export==4.3.7
+gunicorn==23.0.0
 import-export==0.3.1
 numpy==2.3.0
+packaging==25.0
 pandas==2.3.0
 pillow==11.2.1
 psycopg2-binary==2.9.10
